syntax = "proto3";
package news;

service TypesServiceGrpc {
  rpc Create (Types) returns (Types);
  rpc GetList (GetTypesRequest) returns (ListTypess);
  rpc GetById (IdRequest) returns (Types);
  rpc Update (Types) returns (Types);
  rpc Delete (IdRequest) returns (DeleteTypesResponse);
}

message Types {
   int32 id = 1;
   string createdAt = 2;
   string updatedAt = 3;
   int32 createdBy = 4;
   int32 updatedBy = 5;
   string state = 6;
  string name = 7;
  string type = 8;
}

message GetTypesRequest {
   int32 id = 1;
   string createdAt = 2;
   string updatedAt = 3;
   int32 createdBy = 4;
   int32 updatedBy = 5;
   string state = 6;
   int32 page = 7;
   int32 limit = 8;
   string sortBy = 9;
   string sortOrder = 10;
   string name = 11;
   string type = 12;
}

message DeleteTypesResponse {
  bool success = 1;
}

message ListTypess {
  repeated Types data = 1;
   int32 totalItems = 2;
   int32 perPage = 3;
   int32 totalPages = 4;
   int32 page = 5;
}
